# RenderingEngine

./: .gitignore  FastPush.sh  README.md
code/: CMakeLists.txt  Doxyfile  README.html  README.md
code/include/: Application.h  Camera.h  EventHandler.h  GLSetup.h  Geometry.h  GeometryEditor.h  ImGuiLayer.h  QEM.h  RenderLayer.h  Renderer.h  ResourceManager.h  mesh.h  shader_s.h
code/shaders/: lamp01.fs  lamp01.vs  shader01.fs
code/src/: Application.cpp  EventHandler.cpp  GLSetup.cpp  Geometry.cpp  GeometryEditor.cpp  ImGuiLayer.cpp  QEM.cpp  RenderLayer.cpp  Renderer.cpp  ResourceManager.cpp  main.cpp  mesh.cpp  shader_s.cpp
